--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "chart.js": "^2.9.4",
+    "classnames": "^2.2.6",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.10.0",
     "react-countup": "^4.3.3",
