--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-chartjs-2": "^2.10.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "terser": "^5.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
