--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "axios": "^0.20.0",
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
+    "i18next": "^19.8.4",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.10.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.14.0",
+    "react-i18next": "^11.8.4",
     "react-scripts": "3.4.3",
     "terser": "^5.5.1"
   },
